修复delete请求无法正常生成swagger文档的问题
