# swagger/json/service.swagger.json
@@ -75,6 +75,39 @@
           "EchoService"
         ]
       }
+    },
+    "/echo3": {
+      "delete": {
+        "summary": "Delete 请求回显发送的请求内容",
+        "operationId": "EchoService_Echo3",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/messageResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/runtimeError"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/messageRequest"
+            }
+          }
+        ],
+        "tags": [
+          "EchoService"
+        ]
+      }
     }
   },
   "definitions": {
